--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,11 @@
   padding: 15px;
   border: 1px solid black;
 }
+
+.message {
+  font-size: 24px;
+  color: white;
+  background-color: black;
+  width: 300px;
+  margin: auto;
+}
